# Fission

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.MD  README.md  TaskList.md  __text.txt  graph_generator.bat  test.txt  text.txt
.github/workflows/: release-server.yml
Dependencies/Luau/Compiler/src/: Compiler.cpp
Dependencies/Luau/VM/include/: lualib.h
Dependencies/Luau/VM/src/: laux.cpp  lbaselib.cpp  lveclib.cpp
Fission.CLI/src/: main.cpp
Fission.Common/: BytecodeDecoder.cpp
Fission.Common/include/: BinaryReader.hpp  BytecodeDecoder.hpp  InstructionDecoder.hpp  pch.hpp
Fission.Common/src/: InstructionDecoder.cpp
Fission.Decompiler/: Deserializer.cpp  Deserializer.hpp
Fission.Decompiler/include/: ASTLifter.hpp  BytecodeLifter.hpp  ControlFlowAnalyzer.hpp  Decompiler.hpp  DenominatorAnalysis.hpp  Deserializer.hpp  IRLifter.hpp  OldASTLifter.hpp  SSABuilder.hpp  SafetyGuard.hpp
Fission.Decompiler/include/AbstractSyntaxTree/: ASTNode.hpp  Visitor.hpp
Fission.Decompiler/include/AbstractSyntaxTree/Nodes/: CommentNode.hpp  FunctionDeclarationNode.hpp  RootNode.hpp
Fission.Decompiler/include/Analysis/: RobloxTypeInferer.hpp
Fission.Decompiler/include/Rewriters/: ASTRewriter.hpp  DeadLocalEliminator.hpp  IfChainSimplifier.hpp  ShortCircuitFolder.hpp
Fission.Decompiler/include/SourceGenerator/: Generator.hpp
Fission.Decompiler/src/: ASTLifter.cpp  BytecodeLifter.cpp  ControlFlowAnalyzer.cpp  Decompiler.cpp  DenominatorAnalysis.cpp  Deserializer.cpp  IRLifter.cpp  OldASTLifter.cpp  SSABuilder.cpp
Fission.Decompiler/src/Analysis/: RobloxTypeInferer.cpp
Fission.Server/src/: main.cpp
Fission.Tests/: TestLibassertHandler.cpp
Fission.Tests/CFG/: CFGCoherence.cpp
Fission.Tests/Decoding/: BytecodeV6Decoding.cpp
Fission.Tests/Decompiler/: ComplexControlFlow.cpp  ControlFlowRegressions.cpp  DecompilationRoundtrip.cpp  LiftingSemantics.cpp  TypeInference.cpp
Samples/: DeadBranch.luau  NestedCalls.lua  NestedTables.lua  UNREACHABLE_JUMP_ON_RETURN.lua
Samples/StressTests/: 01_numeric_for.lua  02_generic_for.lua  03_while_repeat.lua  04_conditionals.lua  05_short_circuit.lua  06_loops_with_ifs.lua  07_nested_mixed.lua  08_edge_cases.lua  09_closures.lua  10_varargs.lua  11_tailcalls_and_multiret.lua  12_methods_and_tables.lua  13_complex_loops.lua  14_expressions.lua  15_generic_for_edge.lua  16_short_circuit_deep.lua  17_numeric_for_edge.lua  18_loop_control_flow.lua  19_upvalues_and_globals.lua  20_string_ops.lua  BaseCameraSubset.lua  CharacterUtil.lua  run_all.ps1
cmake/: CPM.cmake  ccache.cmake  identify_compiler.cmake
cmake/patches/: libassert-add-algorithm-include.cmake  libassert-add-algorithm-include.patch
thoughts/shared/designs/: 2026-05-28-test-expansion-design.md
